feat: initial frontend and updated backend to support
