# api/models/setup.go
@@ -29,7 +29,7 @@ func ConnectDatabase() {
 		log.Fatalf("failed to connect database: %v", err.Error())
 	}
 
-	err = database.AutoMigrate(&Pokemon{}, &Evolution{}, &EvolutionRequirement{}, &Move{}, &Type{})
+	err = database.AutoMigrate(&Pokemon{}, &Evolution{}, &EvolutionRequirement{}, &Move{}, &MoveType{})
 
 	if err != nil {
 		log.Fatalf("Failed to migrate database: %v", err.Error())
